# Team-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  NOTICE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
caddy/: Caddyfile
deploy/: onyx.service
docs/: user-guide.md
docs/specs/: team-platform-design.html
frontend/: app.js  index.html  styles.css
frontend/modules/: admin.js  auth.js  board.js  chat.js  core.js  cost.js  cycles.js  fileparse.js  help.js  i18n.js  integrations.js  members.js  notifications.js  pages.js  savedviews.js  share.js  starfield.js  state.js  suggestions.js  tokens.js  views.js  workspace.js
scripts/: test_imap.py
sidecar/: package-lock.json  package.json  server.js  toolSearch.js
src/ai/: assistant.py  brief.py  decompose.py  dispatch.py  impl_hint.py  runtime.py  schemas.py  tools.py  usage.py  web_search.py
src/api/: app.py  deps.py
src/capture/: dingtalk.py  github.py  gitlab.py  sync.py  telegram.py  wecom_mail.py
src/clients/: __init__.py  cli.py  core.py  mcp_server.py
src/core/: config.py  crypto.py  database.py  jarvisbim.py  security.py  sso.py
src/migrations/: env.py  script.py.mako
src/models/: __init__.py  ai_suggestion.py  assistant_skill.py  assistant_workspace.py  audit_log.py  chat.py  common.py  cycle.py  event_cache.py  integration.py  llm_call.py  notification.py  org_group.py  page.py  pat.py  project.py  project_member.py  project_workspace.py  report.py  saved_view.py  scheduled_job.py  task.py  tenant.py  (+1 more)
tests/: conftest.py
(+102 files in other folders)
